--- a/android-jetpack-arquitectura-componentes-LifeCycleViewModel/gradle/wrapper/gradle-wrapper.properties
+++ b/android-jetpack-arquitectura-componentes-LifeCycleViewModel/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Thu Jul 01 21:39:29 MDT 2021
+#Sat Jun 01 11:21:11 COT 2019
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-5.1.1-all.zip
